--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
                 <div class="timeline-dot"></div>
                 <div class="timeline-date" data-key="education_1_date">2019</div>
                 <div class="timeline-content">
-                    <h3>International Baccalaureate</h3>
-                    <p>Liceo Sinaí High School Peréz Zeledón, San Isidro del General.
+                     <h3 data-key="education_1_title" data-translate="diploma_title">International Baccalaureate</h3>
+                    <p data-key="education_1_desc" data-translate="diploma_description">Liceo Sinaí High School Peréz Zeledón, San Isidro del General.
                         Completion of the International Baccalaureate Diploma Program.</p>
                 </div>
             </div>
@@ -294,7 +294,7 @@
                 <a href="#skills" data-key="nav_skills">Projects</a>
             </li>
             <li>
-                                <a href="#contact" data-key="nav_contact" data-translate="contact_me_footer">Contact Me</a>
+                <a href="#contact" data-key="nav_contact" data-translate="contact_me_footer">Contact Me</a>
             </li>
         </ul>
                 <p class="copyright" data-key="footer_copyright" data-translate="copyright">
