--- a/project1.html
+++ b/project1.html
@@ -208,7 +208,7 @@
                 </div>
                 
                 <div class="tech-stack">
-                    <h2>Methodology</h2>
+                    <h2 data-key="p1_methodology_title">Methodology</h2>
                     <ul>
                         <li>Scrum</li>
                     </ul>
@@ -251,19 +251,19 @@
 
         <ul class="list">
             <li>
-                <a href="#home" data-key="nav_home" data-translate="home_footer">Home</a>
+                <a href="index.html#home" data-key="nav_home">Home</a>
             </li>
             <li>
-                <a href="#education" data-key="nav_education">Education</a>
+                <a href="index.html#education" data-key="nav_education">Education</a>
             </li>
             <li>
-                <a href="#projects" data-key="nav_projects">Projects</a>
+                <a href="index.html#projects" data-key="nav_projects">Projects</a>
             </li>
             <li>
-                <a href="#skills" data-key="nav_skills">Skills</a>
+                <a href="index.html#skills" data-key="nav_skills">Skills</a>
             </li>
             <li>
-                                <a href="#contact" data-key="nav_contact" data-translate="contact_me_footer">Contact Me</a>
+                <a href="index.html#contact" data-key="nav_contact">Contact Me</a>
             </li>
         </ul>
         <p class="copyright">
