--- a/project2.html
+++ b/project2.html
@@ -284,19 +284,19 @@
 
         <ul class="list">
             <li>
-                <a href="#home">Home</a>
+                <a href="index.html#home" data-key="nav_home">Home</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="index.html#education" data-key="nav_education">Education</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="index.html#projects" data-key="nav_projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="index.html#skills" data-key="nav_skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="index.html#contact" data-key="nav_contact">Contact Me</a>
             </li>
         </ul>
         <p class="copyright">
