--- a/project3.html
+++ b/project3.html
@@ -246,8 +246,8 @@
                 <div class="gallery-item" style="display: flex; justify-content: center; align-items: center; padding: 1rem;">
                     <img src="promec.gif" alt="Performance Metrics" style="max-width: 100%; max-height: 300px; width: auto; height: auto; display: block;">
                 </div>
-                <div class="gallery-item" style="display: flex; justify-content: center; align-items: center; padding: 1rem;">
-                    <img src="pagina.gif" alt="Performance Metrics" style="max-width: 100%; max-height: 300px; width: auto; height: auto; display: block;">
+                <div class="gallery-item" style="grid-column: span 2; grid-row: span 2; display: flex; justify-content: center; align-items: center; padding: 2rem;">
+                    <img src="pagina.gif" alt="Performance Metrics" style="max-width: 100%; max-height: 1200px; width: auto; height: auto; display: block;">
                 </div>
             </div>
         </div>
@@ -263,19 +263,19 @@
 
         <ul class="list">
             <li>
-                <a href="#home">Home</a>
+                <a href="index.html#home" data-key="nav_home">Home</a>
             </li>
             <li>
-                <a href="#education">Education</a>
+                <a href="index.html#education" data-key="nav_education">Education</a>
             </li>
             <li>
-                <a href="#projects">Projects</a>
+                <a href="index.html#projects" data-key="nav_projects">Projects</a>
             </li>
             <li>
-                <a href="#skills">Skills</a>
+                <a href="index.html#skills" data-key="nav_skills">Skills</a>
             </li>
             <li>
-                <a href="#contact">Contact</a>
+                <a href="index.html#contact" data-key="nav_contact">Contact Me</a>
             </li>
         </ul>
         <p class="copyright">
